# libvmod-calmdown

./: README.md  configure.ac
src/: Makefile.am  tokenbucket.c  tokenbucket.h  vmod_calmdown.c  vmod_calmdown.vcc  yamlparser.c  yamlparser.h
src/conf/: settings.yaml
